--- a/bower.json
+++ b/bower.json
@@ -21,9 +21,12 @@
     "satellizer": "^0.15.5",
     "angular-bootstrap": "^2.5.0",
     "bootstrap-css-only": "^3.3.7",
-    "angular-animate": "^1.6.4"
+    "angular-animate": "^1.6.4",
+    "angular-sanitize": "^1.6.4",
+    "zero-md": "zerodevx/zero-md#^0.2.0"
   },
   "resolutions": {
-    "angular": "1.6.4"
+    "angular": "1.6.4",
+    "showdown": "~0.3.1"
   }
 }
