--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     }
   },
   "dependencies": {
+    "angular-sanitize": "^1.6.4",
     "aws-sdk": "^2.49.0",
     "bcrypt": "^1.0.2",
     "bluebird": "^3.5.0",
